Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4.6, 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
-
Ubuntu 18.04, running MariaDB 10.4.6 in Docker
Description
This sql query returns a wrong result:
CREATE SCHEMA A; |
|
|
CREATE TABLE A.B (C INTEGER, D INTEGER); |
|
|
INSERT INTO A.B VALUES (5, 1), (0, 3); |
|
|
SELECT DISTINCT SUM(DISTINCT 1), SUM( B.D) > 2 FROM (A.B AS E CROSS JOIN A.B) GROUP BY B.C |
Postgres 11.3 returns (1, 0) and (1,1), MariaDB in Version 10.4.6 and MySQL in Version 8.0.16 both only return (1, 1). Manually verified, the Postgres result is the correct one (group by results into two rows, sum > 2 is one for one group and false for the other. Therefore, I expect that MariaDB should also return 1,1 and 1,0.
Removing one DISTINCT, one of the columns or > 2 removes the issue. I reduced the testcase as much as possible, therefore I replaced columns with constant if possible. The program now looks a bit constructed, but with columns, the bug also occurs.
Attachments
Issue Links
- causes
-
MDEV-31743 Server crash in store_length, assertion failure in Type_handler_string_result::sort_length
-
- Closed
-
- relates to
-
MDEV-24837 HAVING clause yields wrong results in 10.2 and 10.3, fine in 10.1
-
- Closed
-